hphp/hack/test/typecheck/let/let_subtype.php.exp
File "let_subtype.php", line 15, characters 12-12:
Invalid argument (Typing[4110])
File "let_subtype.php", line 6, characters 19-19:
Expected A
File "let_subtype.php", line 13, characters 11-11:
But got I
